syntax = "proto3";

package saas.api.account.resourcev1;

// 多语言特定包名，用于源代码引用
option go_package           = "github.com/go-micro-saas/account-service/api/account-service/v1/resources;resourcev1";
option java_multiple_files  = true;
option java_package         = "saas.api.account.resourcev1";
option java_outer_classname = "SaasApiAccountResourceV1";

import "api/account-service/v1/enums/account.enum.v1.proto";
// import "google/protobuf/empty.proto";

// PingReq ...
message PingReq {
  string message = 1;
}

// PingResp ...
message PingResp {
  int32 code                   = 1;
  string reason                = 2;
  string message               = 3;
  map<string, string> metadata = 4;

  PingRespData data = 100;
}

message PingRespData {
  string message = 1;
}

// UserInfo 用户信息
message UserInfo {
  uint64 user_id       = 1;
  string user_nickname = 2;
  string user_avatar   = 3;
}

// LoginOrSignupByPhoneReq 手机登陆(自动注册)
message LoginOrSignupByPhoneReq {
  // user_phone 手机号码
  string user_phone = 1;
  // code 验证码
  string code = 5;
}

message SignupByPhoneReq {
  string user_name = 1;
  string password  = 2;
  string code      = 3;
}

message SignupByEmailReq {
  string email            = 1;
  string password         = 2;
  string password_confirm = 3;
  string code             = 4;
}

// LoginByPhoneReq 用户登录
message LoginByPhoneReq {
  string phone    = 1;
  string password = 2;
  string code     = 3;
}

// LoginByEmailReq 用户登录
message LoginByEmailReq {
  string email    = 1;
  string password = 2;
  string code     = 3;
}

// OpenApiLoginReq ...
message OpenApiLoginReq {
  string access_id     = 1;
  string access_secret = 2;
}

message LoginResp {
  int32 code                   = 1;
  string reason                = 2;
  string message               = 3;
  map<string, string> metadata = 4;

  LoginRespData data = 100;
}

message LoginRespData {
  UserInfo user_info = 1;

  string access_token            = 10;
  int64 access_token_expired_at  = 11;  // 时间戳，单位：秒
  string refresh_token           = 12;
  int64 refresh_token_expired_at = 13;  // 时间戳，单位：秒
}

message RefreshTokenReq {
  string refresh_token = 1;
}

message ChangePasswordReq {
  string old_password         = 1;
  string new_password         = 2;
  string new_password_confirm = 3;
}
message ChangePasswordResp {
  int32 code                   = 1;
  string reason                = 2;
  string message               = 3;
  map<string, string> metadata = 4;

  ChangePasswordRespData data = 100;
}
message ChangePasswordRespData {
}

message ChangeAvatarReq {
  string user_avatar = 2;
}
message ChangeAvatarResp {
  int32 code                   = 1;
  string reason                = 2;
  string message               = 3;
  map<string, string> metadata = 4;

  ChangeAvatarRespData data = 100;
}
message ChangeAvatarRespData {
}

message ChangePhoneReq {
  string user_phone = 2;
}
message ChangePhoneResp {
  int32 code                   = 1;
  string reason                = 2;
  string message               = 3;
  map<string, string> metadata = 4;

  ChangePhoneRespData data = 100;
}
message ChangePhoneRespData {
}

message ChangeEmailReq {
  string user_email = 2;
}
message ChangeEmailResp {
  int32 code                   = 1;
  string reason                = 2;
  string message               = 3;
  map<string, string> metadata = 4;

  ChangeEmailRespData data = 100;
}
message ChangeEmailRespData {
}

message ChangeNicknameReq {
  string user_nickname = 2;
}
message ChangeNicknameResp {
  int32 code                   = 1;
  string reason                = 2;
  string message               = 3;
  map<string, string> metadata = 4;

  ChangeNicknameRespData data = 100;
}
message ChangeNicknameRespData {
}

message ChangeGenderReq {
  enumv1.UserGenderEnum.UserGender user_gender = 6;
}
message ChangeGenderResp {
  int32 code                   = 1;
  string reason                = 2;
  string message               = 3;
  map<string, string> metadata = 4;

  ChangeGenderRespData data = 100;
}
message ChangeGenderRespData {
}