syntax = "proto3";

package saas.api.account.conf;

option go_package           = "github.com/go-micro-saas/account-service/app/account-service/internal/conf;conf";
option java_multiple_files  = true;
option java_package         = "saas.api.account.conf";
option java_outer_classname = "SaasApiAccountConf";

import "validate/validate.proto";

message ServiceConfig {
  message AccountService {
    // Snowflake nodeid for snowflake
    message Snowflake {
      string instance_id           = 1 [(validate.rules).string = { min_len: 1 }];
      string instance_name         = 2;
      map<string, string> metadata = 3;
    }
    // SendEmailCode 发送邮件验证码
    message SendEmailCode {
      string issuer   = 1 [(validate.rules).string = { min_len: 1 }];
      string subject  = 2 [(validate.rules).string = { min_len: 1 }];
      string host     = 3 [(validate.rules).string = { min_len: 1 }];
      int32 port      = 4 [(validate.rules).int32 = { gte: 1, lte: 65535 }];
      string username = 5;
      string password = 6;
      string from     = 7 [(validate.rules).string = { min_len: 1 }];
    }

    Snowflake snowflake           = 1;
    SendEmailCode send_email_code = 2;
  }
  AccountService account_service = 1;
}